--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "DOTENV_CONFIG_PATH=.env.development nest start --watch",
+    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "DOTENV_CONFIG_PATH=.env.production node dist/main",
+    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,43 +20,37 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/bull": "^10.2.2",
+    "@nestjs/cache-manager": "^2.3.0",
+    "@nestjs/common": "^10.2.3",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/typeorm": "^10.0.2",
-    "dotenv": "^16.4.5",
-    "ioredis": "^5.4.1",
-    "nestjs-redis": "^1.3.3",
-    "pg": "^8.13.1",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "@nestjs/core": "^10.2.3",
+    "@nestjs/platform-express": "^10.2.3",
+    "@nestjs/typeorm": "^10.0.0",
+    "axios": "^1.5.0",
+    "bull": "3",
+    "cache-manager": "^5.2.4",
+    "cache-manager-ioredis": "^2.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "ioredis": "^5.3.2",
+    "pg": "^8.11.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.4.9",
-    "@types/express": "^5.0.0",
-    "@types/ioredis": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "dotenv-cli": "^7.4.4",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "@nestjs/testing": "^10.2.3",
+    "@types/axios": "^1.5.0",
+    "@types/bull": "^3.15.0",
+    "@types/cache-manager": "^4.0.2",
+    "@types/ioredis": "^4.28.5",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.0.0",
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^5.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
