--- a/.env.development.example
+++ b/.env.development.example
@@ -6,3 +6,9 @@ DATABASE_PASSWORD=root
 DATABASE_NAME=demetra_db
 REDIS_HOST=localhost
 REDIS_PORT=6379
+PORT=4000
+
+PROXY_HOST=45.196.48.9
+PROXY_PORT=5435
+PROXY_USERNAME=jtzhwqur
+PROXY_PASSWORD=jnf0t0n2tecg
